--- a/app/src/main/res/layout/homepage_main.xml
+++ b/app/src/main/res/layout/homepage_main.xml
@@ -51,7 +51,8 @@
             android:layout_marginTop="24dp"
             android:background="#EFEFEF"
             android:textSize="16sp"
-            android:textColor="#000000" />
+            android:textColor="#000000"
+            android:clickable="false"/>
     </LinearLayout>
 
 </RelativeLayout>
