--- a/app/src/main/res/layout/horizontal_menu.xml
+++ b/app/src/main/res/layout/horizontal_menu.xml
@@ -37,7 +37,7 @@
     <TextView
         android:id="@+id/title"
         android:textColor="@color/black"
-        android:fontFamily="@font/FunnelDisplay"
+        android:fontFamily="@font/FunnelDisplay-Bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
