--- a/app/src/main/res/layout/pantry_layout.xml
+++ b/app/src/main/res/layout/pantry_layout.xml
@@ -9,7 +9,7 @@
         android:orientation="vertical">
 
         <include
-            layout="@layout/menu_orizzontale" />
+            layout="@layout/horizontal_menu" />
 
         <!-- Contenuto della schermata Dispensa -->
     </LinearLayout>
