--- a/app/src/main/res/layout/homepage_main.xml
+++ b/app/src/main/res/layout/homepage_main.xml
@@ -12,6 +12,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="35dp"
         android:text="FarFromHome"
         android:fontFamily="@font/funneldisplay_extrabold"
         android:textSize="30dp"
@@ -35,6 +37,7 @@
             android:layout_weight="1"
             android:background="#402E32"
             android:text="Lista della spesa"
+            android:textSize="35dp"
             android:layout_marginBottom="12dp"
             android:layout_gravity="center"
             android:layout_width="match_parent"
@@ -46,6 +49,7 @@
             android:layout_weight="1"
             android:background="#402E32"
             android:text="Dispensa"
+            android:textSize="35dp"
             android:layout_marginBottom="12dp"
             android:layout_width="match_parent"
             android:layout_height="100dp" />
@@ -56,6 +60,7 @@
             android:layout_weight="1"
             android:background="#402E32"
             android:text="Valigia"
+            android:textSize="35dp"
             android:layout_marginBottom="24dp"
             android:layout_width="match_parent"
             android:layout_height="100dp" />
@@ -64,7 +69,7 @@
         <TextView
             android:id="@+id/warningtext"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="200dp"
             android:text="Avvisi dispensa"
             android:gravity="center"
             android:padding="16dp"
