--- a/app/src/main/res/layout/homepage_main.xml
+++ b/app/src/main/res/layout/homepage_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:background="#FBD39D"
@@ -13,10 +12,10 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="35dp"
+        android:layout_marginTop="15dp"
         android:text="FarFromHome"
         android:fontFamily="@font/funneldisplay_extrabold"
-        android:textSize="30dp"
+        android:textSize="40dp"
         android:textColor="#402E32">
 
 
@@ -35,7 +34,7 @@
         <Button
             android:id="@+id/shoppinglistbutton"
             android:layout_weight="1"
-            android:backgroundTint="@color/black"
+            android:backgroundTint="@color/brown"
             android:text="Lista della spesa"
             android:textSize="35dp"
             android:textColor="@color/white"
@@ -48,7 +47,7 @@
         <Button
             android:id="@+id/pantrybutton"
             android:layout_weight="1"
-            android:backgroundTint="@color/black"
+            android:backgroundTint="@color/brown"
             android:text="Dispensa"
             android:textSize="35dp"
             android:textColor="@color/white"
@@ -60,7 +59,7 @@
         <Button
             android:id="@+id/suitcasebutton"
             android:layout_weight="1"
-            android:backgroundTint="@color/black"
+            android:backgroundTint="@color/brown"
             android:text="Valigia"
             android:textSize="35dp"
             android:textColor="@color/white"
