--- a/app/src/main/res/layout/horizontal_menu.xml
+++ b/app/src/main/res/layout/horizontal_menu.xml
@@ -2,7 +2,7 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="150px"
     android:layout_weight="0.1"
     android:orientation="horizontal"
     android:gravity="start"
