--- a/app/src/main/res/layout/pantry_layout.xml
+++ b/app/src/main/res/layout/pantry_layout.xml
@@ -1,17 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <include
+        android:id="@+id/horizontal_menu"
+        layout="@layout/horizontal_menu"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"/>
+
+    <!-- Vertical menu on the left -->
+    <include
+        android:id="@+id/vertical_menu"
+        layout="@layout/vertical_menu"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_below="@id/horizontal_menu"
+        android:layout_alignParentLeft="true"/>
 
-        <include
-            layout="@layout/horizontal_menu" />
 
-        <!-- Contenuto della schermata Dispensa -->
-    </LinearLayout>
+    <!-- Contenuto della schermata Dispensa -->
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
