--- a/app/src/main/res/layout/vertical_menu.xml
+++ b/app/src/main/res/layout/vertical_menu.xml
@@ -26,8 +26,10 @@
                 android:textSize="10dp"
                 android:text="Cucina"
                 android:onClick="goToCategory1"
-                android:background="@color/lightBrown"
-                android:textColor="@color/white"
+                android:background="@color/brown"
+                android:textColor="@color/black"
+                android:fontFamily="@font/funneldisplay_bold"
+                android:padding="0dp"
                 android:layout_marginBottom="5dp"
                 />
             <Button
@@ -37,8 +39,10 @@
                 android:textSize="10dp"
                 android:text="Bagno"
                 android:onClick="goToCategory1"
-                android:background="@color/lightBrown"
-                android:textColor="@color/white"
+                android:background="@color/brown"
+                android:textColor="@color/black"
+                android:fontFamily="@font/funneldisplay_bold"
+                android:padding="0dp"
                 android:layout_marginBottom="5dp"
                 />
             <Button
@@ -48,8 +52,10 @@
                 android:textSize="10dp"
                 android:text="Frigo"
                 android:onClick="goToCategory1"
-                android:background="@color/lightBrown"
-                android:textColor="@color/white"
+                android:background="@color/brown"
+                android:textColor="@color/black"
+                android:fontFamily="@font/funneldisplay_bold"
+                android:padding="0dp"
                 android:layout_marginBottom="5dp"
                 />
             <Button
@@ -59,8 +65,10 @@
                 android:textSize="10dp"
                 android:text="Altro"
                 android:onClick="goToCategory1"
-                android:background="@color/lightBrown"
-                android:textColor="@color/white"
+                android:background="@color/brown"
+                android:textColor="@color/black"
+                android:fontFamily="@font/funneldisplay_bold"
+                android:padding="0dp"
                 android:layout_marginBottom="5dp"
                 />
 
@@ -73,7 +81,9 @@
         android:layout_height="wrap_content"
         android:text="+"
         android:onClick="addCategory"
-        android:background="@color/lightBrown"
-        android:textColor="@color/white"
+        android:background="@color/brown"
+        android:textColor="@color/lightBrown"
+        android:fontFamily="@font/funneldisplay_bold"
+        android:padding="0dp"
         android:layout_margin="8dp"/>
 </LinearLayout>
