Correzione menu, implementazione parziale pantry e elementi liste

--- a/app/src/main/res/layout/horizontal_menu.xml
+++ b/app/src/main/res/layout/horizontal_menu.xml
@@ -30,8 +30,7 @@
             android:layout_height="50dp"
             android:focusable="true"
             android:src="@drawable/cart"
-            android:clickable="true"
-/>
+            android:clickable="true"/>
     </LinearLayout>
 
     <TextView
