--- a/app/src/main/res/layout/shopping_list_layout.xml
+++ b/app/src/main/res/layout/shopping_list_layout.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -12,11 +12,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"/>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:orientation="horizontal">
         <include
             android:id="@+id/vertical_menu"
             layout="@layout/vertical_menu"
@@ -29,9 +24,10 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
             android:orientation="vertical"
-            android:padding="16dp">
+            android:padding="16dp"
+            android:layout_below="@+id/horizontal_menu"
+            android:layout_toRightOf="@id/vertical_menu">
 
             <!-- List item 1 -->
             <LinearLayout
@@ -163,14 +159,6 @@
                 </LinearLayout>
             </LinearLayout>
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recycler_view"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:layout_marginTop="16dp"/>
-
-
             <Button
                 android:id="@+id/addCategory"
                 android:layout_width="wrap_content"
@@ -185,6 +173,4 @@
                 android:padding="0dp"
                 android:layout_margin="8dp"/>
         </LinearLayout>
-
-    </LinearLayout>
-</LinearLayout>
+</RelativeLayout>
