Pantry grafica e vertical menu

--- a/app/src/main/res/layout/vertical_menu.xml
+++ b/app/src/main/res/layout/vertical_menu.xml
@@ -20,53 +20,59 @@
             android:orientation="vertical">
 
             <Button
-                android:id="@+id/Cucina"
                 android:layout_width="80dp"
+                android:layout_height="5dp"
+                android:background="@drawable/menu_buttons"
+                />
+
+            <Button
+                android:id="@+id/Cucina"
+                android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:textSize="10dp"
                 android:text="Cucina"
                 android:onClick="goToCategory1"
-                android:background="@color/brown"
-                android:textColor="@color/black"
+                android:background="@drawable/menu_buttons"
+                android:textColor="@color/lightBrown"
                 android:fontFamily="@font/funneldisplay_bold"
                 android:padding="0dp"
                 android:layout_marginBottom="5dp"
                 />
             <Button
                 android:id="@+id/Bagno"
-                android:layout_width="80dp"
+                android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:textSize="10dp"
                 android:text="Bagno"
                 android:onClick="goToCategory1"
-                android:background="@color/brown"
-                android:textColor="@color/black"
+                android:background="@drawable/menu_buttons"
+                android:textColor="@color/lightBrown"
                 android:fontFamily="@font/funneldisplay_bold"
                 android:padding="0dp"
                 android:layout_marginBottom="5dp"
                 />
             <Button
                 android:id="@+id/Frigo"
-                android:layout_width="80dp"
+                android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:textSize="10dp"
                 android:text="Frigo"
                 android:onClick="goToCategory1"
-                android:background="@color/brown"
-                android:textColor="@color/black"
+                android:background="@drawable/menu_buttons"
+                android:textColor="@color/lightBrown"
                 android:fontFamily="@font/funneldisplay_bold"
                 android:padding="0dp"
                 android:layout_marginBottom="5dp"
                 />
             <Button
                 android:id="@+id/Altro"
-                android:layout_width="80dp"
+                android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:textSize="10dp"
                 android:text="Altro"
                 android:onClick="goToCategory1"
-                android:background="@color/brown"
-                android:textColor="@color/black"
+                android:background="@drawable/menu_buttons"
+                android:textColor="@color/lightBrown"
                 android:fontFamily="@font/funneldisplay_bold"
                 android:padding="0dp"
                 android:layout_marginBottom="5dp"
@@ -81,7 +87,7 @@
         android:layout_height="wrap_content"
         android:text="+"
         android:onClick="addCategory"
-        android:background="@color/brown"
+        android:background="@drawable/menu_buttons"
         android:textColor="@color/lightBrown"
         android:fontFamily="@font/funneldisplay_bold"
         android:padding="0dp"
