--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -39,9 +39,9 @@
             android:id="@+id/decrementButton"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:text="-"
-            android:background="@color/brown"
-            />
+            android:background="@drawable/rounded_background"
+            android:textColor="@color/black"
+            android:text="-"/>
 
         <TextView
             android:id="@+id/itemQuantity"
@@ -56,6 +56,7 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:text="+"
-            android:background="@color/brown"/>
+            android:textColor="@color/black"
+            android:background="@drawable/rounded_background"/>
     </LinearLayout>
 </LinearLayout>
