--- a/app/src/main/res/layout/pantry_layout.xml
+++ b/app/src/main/res/layout/pantry_layout.xml
@@ -28,16 +28,16 @@
             android:layout_below="@id/horizontal_menu"
             android:padding="8dp" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
+    <Button
         android:id="@+id/addItemButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Aggiungi elemento"
+        android:text="+"
         android:gravity="center"
         android:layout_gravity="end"
         android:onClick="addElement"
-        android:background="@color/brown"
-        android:textColor="@color/black"
+        android:background="@drawable/rounded_background"
+        android:textColor="@color/lightBrown"
         android:fontFamily="@font/funneldisplay_bold"
         android:padding="0dp"
         android:layout_margin="8dp"
