--- a/app/src/main/res/layout/horizontal_menu.xml
+++ b/app/src/main/res/layout/horizontal_menu.xml
@@ -20,9 +20,10 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:focusable="true"
-            android:src="@drawable/cart"
+            android:src="@drawable/home_icon"
             android:layout_marginEnd="10dp"
-            android:clickable="true"/>
+            android:clickable="true"
+            android:onClick="goToHome"/>
 
         <ImageView
             android:id="@+id/shopImage"
