--- a/app/src/main/res/layout/pantry_item_layout.xml
+++ b/app/src/main/res/layout/pantry_item_layout.xml
@@ -13,11 +13,12 @@
 
     <ImageView
         android:id="@+id/itemImage"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:maxWidth="20dp"
+        android:maxHeight="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:contentDescription="Item Image"
-        android:visibility="gone" />
+        android:src="@drawable/home_icon"/>
 
     <TextView
         android:id="@+id/itemName"
@@ -61,13 +62,6 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center">
-            <Button
-                android:id="@+id/decrementButton"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:background="@drawable/rounded_background"
-                android:textColor="@color/black"
-                android:text="-"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -75,7 +69,17 @@
                 android:gravity="center"
                 android:text="Quantità:"
                 android:textColor="@color/black"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                android:layout_marginRight="10dp"/>
+
+            <Button
+                android:id="@+id/decrementButton"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:background="@drawable/rounded_background"
+                android:textColor="@color/black"
+                android:text="-"/>
+
             <TextView
                 android:id="@+id/itemQuantity"
                 android:layout_width="wrap_content"
@@ -87,8 +91,8 @@
 
             <Button
                 android:id="@+id/incrementButton"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
                 android:text="+"
                 android:textColor="@color/black"
                 android:background="@drawable/rounded_background"/>
