--- a/app/src/main/res/layout/pantry_layout.xml
+++ b/app/src/main/res/layout/pantry_layout.xml
@@ -12,14 +12,13 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"/>
 
-    <include
+    <FrameLayout
         android:id="@+id/vertical_menu"
-        layout="@layout/vertical_menu"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_below="@id/horizontal_menu"
         android:layout_alignParentLeft="true"/>
-
+    
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/itemList"
             android:layout_width="match_parent"
