--- a/app/src/main/res/layout/shopping_list_layout.xml
+++ b/app/src/main/res/layout/shopping_list_layout.xml
@@ -12,9 +12,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"/>
 
-    <include
+    <FrameLayout
         android:id="@+id/vertical_menu"
-        layout="@layout/vertical_menu"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_below="@id/horizontal_menu"
