--- a/app/src/main/res/layout/vertical_menu.xml
+++ b/app/src/main/res/layout/vertical_menu.xml
@@ -16,69 +16,9 @@
         <LinearLayout
             android:id="@+id/categoryList"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
-
-            <Button
-                android:layout_width="80dp"
-                android:layout_height="5dp"
-                android:background="@drawable/menu_buttons"
-                />
-
-            <Button
-                android:id="@+id/Cucina"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:textSize="10dp"
-                android:text="Cucina"
-                android:onClick="goToCategory1"
-                android:background="@drawable/menu_buttons"
-                android:textColor="@color/lightBrown"
-                android:fontFamily="@font/funneldisplay_bold"
-                android:padding="0dp"
-                android:layout_marginBottom="5dp"
-                />
-            <Button
-                android:id="@+id/Bagno"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:textSize="10dp"
-                android:text="Bagno"
-                android:onClick="goToCategory1"
-                android:background="@drawable/menu_buttons"
-                android:textColor="@color/lightBrown"
-                android:fontFamily="@font/funneldisplay_bold"
-                android:padding="0dp"
-                android:layout_marginBottom="5dp"
-                />
-            <Button
-                android:id="@+id/Frigo"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:textSize="10dp"
-                android:text="Frigo"
-                android:onClick="goToCategory1"
-                android:background="@drawable/menu_buttons"
-                android:textColor="@color/lightBrown"
-                android:fontFamily="@font/funneldisplay_bold"
-                android:padding="0dp"
-                android:layout_marginBottom="5dp"
-                />
-            <Button
-                android:id="@+id/Altro"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:textSize="10dp"
-                android:text="Altro"
-                android:onClick="goToCategory1"
-                android:background="@drawable/menu_buttons"
-                android:textColor="@color/lightBrown"
-                android:fontFamily="@font/funneldisplay_bold"
-                android:padding="0dp"
-                android:layout_marginBottom="5dp"
-                />
-
-    </LinearLayout>
+        </LinearLayout>
     </ScrollView>
 
     <Button
